--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -13,10 +13,10 @@
         android:text="Belum punya akun ?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login" />
+        app:layout_constraintTop_toBottomOf="@+id/keLogin" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/keLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
     <Button
-        android:id="@+id/daftar"
+        android:id="@+id/keDaftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Daftar"
