--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textemail" />
 
     <Button
-        android:id="@+id/daftar"
+        android:id="@+id/keDaftar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
