--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
     <Button
-        android:id="@+id/keDaftar"
+        android:id="@+id/keRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Daftar"
