--- a/app/src/main/res/layout/activity_cuaca.xml
+++ b/app/src/main/res/layout/activity_cuaca.xml
@@ -4,95 +4,145 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".dashboard" >
+    tools:context=".Cuaca"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="309dp"
-        android:orientation="horizontal">
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        android:fitsSystemWindows="true"
+        app:layout_collapseMode="parallax">
 
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/images" />
 
         <TextView
-            android:id="@+id/texttemp"
-            android:layout_width="160dp"
-            android:layout_height="92dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="123dp"
-            android:layout_marginEnd="0dp"
-            android:text="Temperatur"
-            android:textColor="#000000"
-            android:textSize="30sp" />
+            android:id="@+id/txtKota"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/txtTanggal"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="20dp"
+            android:text="Bandung"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/txtTanggal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/text_temp"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="6dp"
+            android:text="Today, Oktober 22"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/text_temp"
+            android:text="90\u00B0"
+            android:textSize="45sp"
+            android:layout_above="@+id/text_temp_min_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"/>
+
+        <TextView
+            android:id="@+id/text_temp_min_max"
+            android:text="78\u00B0"
+            android:textSize="25sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"/>
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="119dp"
+            android:id="@+id/image_desc"
+            android:layout_above="@+id/text_desc"
+            android:layout_width="130dp"
             android:layout_height="130dp"
+            android:layout_marginRight="30dp"
+            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="282dp"
-            android:layout_marginBottom="89dp"
-            app:srcCompat="@android:mipmap/sym_def_app_icon" />
+            app:srcCompat="@android:mipmap/sym_def_app_icon"/>
 
         <TextView
-            android:id="@+id/texttanggal"
-            android:layout_width="251dp"
+            android:id="@+id/text_desc"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="87dp"
-            android:layout_marginBottom="237dp"
-            android:text="Tanggal"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textcuaca"
-            android:layout_width="169dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="49dp"
-            android:text="Cuaca"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textkota"
-            android:layout_width="177dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="94dp"
-            android:layout_marginBottom="272dp"
-            android:text="kota"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textbatastemp"
-            android:layout_width="162dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="18dp"
-            android:text="batassuhu"
-            android:textColor="#000000" />
+            android:layout_marginEnd="29dp"
+            android:layout_marginRight="29dp"
+            android:layout_marginBottom="20dp"
+            android:text="light rain"
+            android:textAlignment="center"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_item"
+        android:id="@+id/recycler_view_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/recycler_view_item" />
+        android:padding="7dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/recycler_view_item_1">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
+
+    <!--<android.support.design.widget.CoordinatorLayout-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--tools:context=".HomeActivity"-->
+    <!--android:fitsSystemWindows="true">-->
+
+    <!--<android.support.design.widget.AppBarLayout-->
+    <!--    android:fitsSystemWindows="true"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="wrap_content">-->
+
+    <!--    <android.support.design.widget.CollapsingToolbarLayout-->
+    <!--        app:layout_scrollFlags="exitUntilCollapsed|scroll"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:fitsSystemWindows="true">-->
+
+
+
+    <!--        <android.support.v7.widget.Toolbar-->
+    <!--            android:id="@+id/toolbar_layout"-->
+    <!--            android:background="@color/colorPrimary"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="?android:attr/actionBarSize"-->
+    <!--            app:layout_collapseMode="pin">-->
+
+    <!--            <ImageView-->
+    <!--                android:layout_width="45dp"-->
+    <!--                android:layout_height="45dp"-->
+    <!--                android:src="@drawable/art_clear"/>-->
+    <!--            <TextView-->
+    <!--                android:id="@+id/text_title"-->
+    <!--                android:text="Sunshine"-->
+    <!--                android:paddingLeft="5dp"-->
+    <!--                android:textSize="30sp"-->
+    <!--                android:textColor="@android:color/white"-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="wrap_content" />-->
+
+    <!--        </android.support.v7.widget.Toolbar>-->
+
+    <!--    </android.support.design.widget.CollapsingToolbarLayout>-->
+    <!--</android.support.design.widget.AppBarLayout>-->
+
+
+
+    <!--</android.support.design.widget.CoordinatorLayout>-->
