Fungsi Register Done

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,20 +23,7 @@
             style="@style/parent"
             android:layout_marginTop="@dimen/signup_text_margin_top">
 
-            <EditText
-                android:id="@+id/edtName"
-                style="@style/modifiedEditText"
-                android:hint="Nama Lengkap"
-                android:inputType="text"
-                android:maxLines="1" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/parent"
-            android:layout_marginTop="@dimen/signup_text_margin_top">
-
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edtUsername"
                 style="@style/modifiedEditText"
                 android:hint="Username"
@@ -44,11 +31,24 @@
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
+
         <com.google.android.material.textfield.TextInputLayout
             style="@style/parent"
             android:layout_marginTop="@dimen/signup_text_margin_top">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtName"
+                style="@style/modifiedEditText"
+                android:hint="Nama Lengkap"
+                android:inputType="text"
+                android:maxLines="1" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/parent"
+            android:layout_marginTop="@dimen/signup_text_margin_top">
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edtEmail"
                 style="@style/modifiedEditText"
                 android:hint="Email"
@@ -61,7 +61,7 @@
             style="@style/parent"
             android:layout_marginTop="@dimen/signup_text_margin_top">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/edtPassword"
                 style="@style/modifiedEditText"
                 android:hint="Password"
