--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -28,7 +28,7 @@
             app:menu="@menu/activity_main_drawer" /> -->
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/buttonCuaca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="300dp"
@@ -72,7 +72,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.137"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
+        app:layout_constraintTop_toBottomOf="@+id/buttonCuaca"
         app:srcCompat="@drawable/btn_marketplace" />
 
 
